cmake_minimum_required(VERSION 3.0)
set(REQUIRED_CPP_VERSION 14)

set(PROJECT_NAME c)
project(${PROJECT_NAME} CXX)

add_executable(${PROJECT_NAME} src/main.cpp)

if (WIN32 OR WIN64)
    set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD ${REQUIRED_CPP_VERSION})
    set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /DBOOST_CONFIG_SUPPRESS_OUTDATED_MESSAGE /D_WIN32_WINNT=0x0601")
elseif(UNIX)
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++${REQUIRED_CPP_VERSION} -DNDEBUG")
    target_link_libraries(${PROJECT_NAME} pthread)
endif()
